# little-buddy

./: .gitignore  DEVELOPMENT_LOG.md  README.md  build-docker.sh
.github/workflows/: build-feather-only.yml
firmware/: CMakeLists.txt  little_buddy.ld
firmware/src/: activity_led.cc  activity_led.h  display_icons.c  display_icons.h  event_processor.c  event_processor.h  hid_parser.cc  hid_parser.h  main.c  main.cc  neopixel.c  neopixel.h  red_led.cc  red_led.h  sh1107_display.c  sh1107_display.cc  sh1107_display.h  tusb_config.h  usb_descriptors.c  usb_device.c  usb_device.cc  usb_device.h  usb_event_types.c  usb_event_types.h  usb_events.c  usb_events.cc  usb_events.h  usb_host.c  usb_host.cc  usb_host.h  usb_input.c  usb_input.h  usb_output.c  usb_output.h  ws2812.pio
firmware/src/display/: display.c  display.h  sh1107.c  sh1107.h
firmware/src/engine/: debugger.c  debugger.h  engine.c  engine.h  task.c
firmware/src/tusb_config_both/: tusb_config.h
firmware/src/tusb_config_device/: tusb_config.h
firmware/src/usb/: device.c  host.c  input.c  output.c  types.c  types.h  usb.c  usb.h
